<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about__about">About</string>
    <string name="about__app_name">Name: %s</string>
    <string name="about__app_uuid">UUID: %s</string>
    <string name="about__description">Bluetooth Messenger Is A Software Engineering Project By Roy James Pacatang</string>
    <string name="about__go_to_crowdin">Go to Crowdin</string>
    <string name="about__go_to_github">Go to GitHub</string>
    <string name="about__localization">Bluetooth Messenger is a user-friendly Android application designed for seamless peer-to-peer communication and image exchange over Bluetooth. Featuring a scan features to detect nearby devices the app allows users to discover, connect, and chat in real time without requiring an internet connection. With a clean interface and reliable Bluetooth connectivity, users can send text messages and share images effortlessly. The app is ideal for quick, offline communication and image transfers between devices in close proximity, making it perfect for classrooms, events, or travel.</string>
    <string name="app_name">Bluetooth Messenger by RJP</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bl_app_name">Bluetooth Messenger</string>
    <string name="bl_app_uuid">220da3b2-41f5-11e7-a919-92ebcb67fe33</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button_negative">Cancel</string>
    <string name="button_positive">OK</string>
    <string name="channel_alpha">A</string>
    <string name="channel_blue">B</string>
    <string name="channel_green">G</string>
    <string name="channel_hue">H</string>
    <string name="channel_red">R</string>
    <string name="channel_saturation">S</string>
    <string name="channel_value">V</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat__bluetooth_is_disabled">Bluetooth is disabled</string>
    <string name="chat__bluetooth_required">This app requires Bluetooth enabled to work properly</string>
    <string name="chat__cd__cancel_image_transfer">Cancel image transfer</string>
    <string name="chat__cd__preshare_image">Image you want to share</string>
    <string name="chat__cd__received_image">Received image</string>
    <string name="chat__cd__send_image_button">Image send button</string>
    <string name="chat__cd__send_text_button">Text send button</string>
    <string name="chat__cd__sent_image">Sent image</string>
    <string name="chat__cd__transferring_image">Transferring image</string>
    <string name="chat__chat">Chat</string>
    <string name="chat__choose_image">Choose Image</string>
    <string name="chat__connect">Connect</string>
    <string name="chat__connected">Connected</string>
    <string name="chat__connected_to_another">You are currently connected to &lt;b>%s&lt;/b>. You can connect to this device but current connection will be interrupted</string>
    <string name="chat__connection_lost">Connection with this device was lost. Do you want to reconnect?</string>
    <string name="chat__connection_rejected">Your connection request was rejected</string>
    <string name="chat__connection_request">&lt;b>%1$s (%2$s)&lt;/b> wants to connect to you</string>
    <string name="chat__date_format_day_of_year">MMMM dd</string>
    <string name="chat__date_format_time">HH:mm</string>
    <string name="chat__device_is_not_available">"This device is not available right now, make sure it's paired"</string>
    <string name="chat__disconnect">Disconnect</string>
    <string name="chat__enable">Enable</string>
    <string name="chat__file_not_exist">Unable to find this file, please try again</string>
    <string name="chat__image_message">%s [Image]</string>
    <string name="chat__message_cannot_be_empty">Message cannot be empty</string>
    <string name="chat__message_hint">Message</string>
    <string name="chat__missing_image">Missing image</string>
    <string name="chat__not_connected">Not connected</string>
    <string name="chat__not_connected_to_send">You are not connected to this device</string>
    <string name="chat__not_connected_to_this_device">You are not connected to this device right now</string>
    <string name="chat__partner_canceled_image_transfer">Your partner has canceled image transfer</string>
    <string name="chat__partner_disconnected">Your partner disconnected from your device. Do you want to reconnect?</string>
    <string name="chat__partner_unable_to_receive_images">Your partner uses an old version of Messenger which is not able to receive images.</string>
    <string name="chat__pending">Pending</string>
    <string name="chat__presharing">You are not connected to this device, please connect and try again.</string>
    <string name="chat__presharing_share">Share</string>
    <string name="chat__problem_during_file_transfer">Problem during image transfer</string>
    <string name="chat__receiving_images">Receiving image</string>
    <string name="chat__reconnect">Reconnect</string>
    <string name="chat__removed_image">Removed image</string>
    <string name="chat__rescan">Rescan</string>
    <string name="chat__sending_failed">Unable to send this message, please try again</string>
    <string name="chat__sending_image">Sending image</string>
    <string name="chat__too_big_image">This image it too big. Max file size which you can send via Bluetooth Chat is %s</string>
    <string name="chat__unable_to_connect">Unable to connect to this device, do you want to try again?</string>
    <string name="chat__unable_to_pick_image">Unable to pick this image, please try again</string>
    <string name="chat__waiting_for_device">You are waiting for this device to approve a connection</string>
    <string name="com.crashlytics.android.build_id">7bab8dca-c8d6-4957-a9aa-1374f902dcff</string>
    <string name="contact_chooser__no_contacts">Your contact list is empty</string>
    <string name="contact_chooser__title">Select Chat</string>
    <string name="conversations__cd__connected_indicator">Connected indicator</string>
    <string name="conversations__cd__partners_avatar">"Partner's avatar"</string>
    <string name="conversations__cd__settings_button">Settings button</string>
    <string name="conversations__cd__users_avatar">"User's avatar"</string>
    <string name="conversations__connection_rejected">Your connection request to &lt;b>%1$s&lt;/b> (%2$s) was rejected</string>
    <string name="conversations__connection_request">&lt;b>%1$s (%2$s)&lt;/b> wants to connect to you</string>
    <string name="conversations__no_conversations">"You don't have any conversations yet, press start new chat to start chatting with friends"</string>
    <string name="conversations__options">Conversation options</string>
    <string name="conversations__permissions_settings">Settings</string>
    <string name="conversations__pin_to_home_screen">Pin to your home screen</string>
    <string name="conversations__removal_confirmation">Do you really want to remove this conversation? All messages will be lost</string>
    <string name="conversations__remove">Remove</string>
    <string name="conversations__scan">+ Start New Chat</string>
    <string name="conversations__settings">Settings</string>
    <string name="conversations__storage_permission">Go to Settings and grant the &lt;b>\"STORAGE\"&lt;/b> permission to use this app.</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="general__cancel">Cancel</string>
    <string name="general__disconnect">Disconnect</string>
    <string name="general__exit">Exit</string>
    <string name="general__no">No</string>
    <string name="general__no_browser">Unable to find browser application</string>
    <string name="general__ok">OK</string>
    <string name="general__restart">Restart</string>
    <string name="general__service_lost">Bluetooth Messenger service just has been stopped, restart the service to be able to use the app</string>
    <string name="general__start_chat">Start chat</string>
    <string name="profile__cd__avatar_preview">Avatar preview</string>
    <string name="profile__color">Color</string>
    <string name="profile__device">Device</string>
    <string name="profile__name">Name</string>
    <string name="profile__save">Save</string>
    <string name="profile__your_name">Your name</string>
    <string name="settings__appearance">Appearance</string>
    <string name="settings__chat_background_color">Chat background color</string>
    <string name="settings__classification">Show only phones or computers</string>
    <string name="settings__discovery">Discovery</string>
    <string name="settings__night_mode">Night mode</string>
    <string name="settings__notifications">Notifications</string>
    <string name="settings__sound">Sound</string>
</resources>