<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/cl_chat_container" android:background="@drawable/chat" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.glodanif.bluetoothchat.ui.widget.ActionView android:id="@id/av_actions" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <FrameLayout android:id="@id/bottomLayout" android:layout_width="0.0dip" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent">
        <LinearLayout android:orientation="horizontal" android:id="@id/ll_text_sending_holder" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textSize="16.0sp" android:gravity="center" android:layout_gravity="center_vertical" android:id="@id/et_message" android:background="@drawable/ic_white" android:padding="8.0dip" android:layout_width="279.0dip" android:layout_height="42.0dip" android:hint="@string/chat__message_hint" android:maxLines="4" android:ems="10" android:layout_weight="1.0" android:inputType="textLongMessage|textCapSentences|textMultiLine" />
            <ViewSwitcher android:layout_gravity="bottom" android:id="@id/vs_send_buttons" android:layout_width="48.0dip" android:layout_height="48.0dip" android:inAnimation="@anim/switcher_scale_in" android:outAnimation="@anim/switcher_scale_out" android:layout_weight="0.0">
                <ImageButton android:id="@id/ib_image" android:background="?android:selectableItemBackground" android:layout_width="57.0dip" android:layout_height="54.0dip" android:contentDescription="@string/chat__cd__send_image_button" app:srcCompat="@drawable/ic_photo" />
                <ImageButton android:id="@id/ib_send" android:background="?android:selectableItemBackground" android:layout_width="fill_parent" android:layout_height="fill_parent" android:contentDescription="@string/chat__cd__send_text_button" app:srcCompat="@drawable/ic_send_black_24dp" />
            </ViewSwitcher>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/ll_image_sending_holder" android:background="?android:colorBackground" android:padding="8.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/iv_transferring_image" android:layout_width="56.0dip" android:layout_height="56.0dip" android:scaleType="centerInside" android:layout_weight="0.0" android:contentDescription="@string/chat__cd__transferring_image" android:layout_marginEnd="16.0dip" />
            <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
                <TextView android:id="@id/tv_sending_image_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" />
                <TextView android:id="@id/tv_file_sending_percentage" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/tv_sending_image_label" android:fontFamily="sans-serif-light" />
                <TextView android:id="@id/tv_file_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/tv_sending_image_label" android:fontFamily="sans-serif-light" android:layout_alignParentEnd="true" />
                <ProgressBar android:id="@id/pb_transferring_progress" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/tv_file_sending_percentage" style="?android:progressBarStyleHorizontal" />
            </RelativeLayout>
            <ImageButton android:layout_gravity="center_vertical" android:id="@id/ib_cancel" android:padding="8.0dip" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_weight="0.0" android:contentDescription="@string/chat__cd__cancel_image_transfer" android:layout_marginStart="16.0dip" app:srcCompat="@drawable/ic_close" style="@style/Widget.AppCompat.Button.Borderless" />
        </LinearLayout>
    </FrameLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="0.0dip" app:layout_constraintBottom_toTopOf="@id/bottomLayout" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toBottomOf="@id/av_actions" app:layout_constraintVertical_bias="1.0">
        <androidx.recyclerview.widget.RecyclerView android:id="@id/rv_chat" android:layout_width="fill_parent" android:layout_height="fill_parent" app:stackFromEnd="true" />
        <com.glodanif.bluetoothchat.ui.widget.GoDownButton android:id="@id/gdb_go_down" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" app:layout_anchor="@id/rv_chat" app:layout_anchorGravity="end|bottom" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <androidx.cardview.widget.CardView android:id="@id/cv_presharing_image_holder" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:cardElevation="4.0dip" app:layout_constraintBottom_toTopOf="@id/bottomLayout" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/relativeLayout" android:layout_width="fill_parent" android:layout_height="124.0dip">
            <ImageView android:id="@id/iv_presharing_image" android:background="@color/background_image" android:layout_width="108.0dip" android:layout_height="108.0dip" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:contentDescription="@string/chat__cd__preshare_image" android:layout_marginStart="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/chat__presharing" android:layout_marginStart="16.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/iv_presharing_image" app:layout_constraintTop_toTopOf="parent" />
            <Button android:textColor="@android:color/white" android:id="@id/btn_retry" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/chat__presharing_share" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" style="@style/Widget.AppCompat.Button.Colored" />
            <Button android:textColor="@drawable/button_text_color" android:id="@id/btn_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:text="@string/general__cancel" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/btn_retry" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toEndOf="@id/iv_presharing_image" style="@style/Widget.AppCompat.Button.Borderless" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
