<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/main_background" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.glodanif.bluetoothchat.ui.widget.ActionView android:id="@id/av_actions" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.0" />
    <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <androidx.recyclerview.widget.RecyclerView android:id="@id/rv_conversations" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/ll_empty_holder" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <TextView android:gravity="center" android:id="@id/textView2" android:layout_width="280.0dip" android:layout_height="wrap_content" android:layout_marginBottom="12.0dip" android:text="@string/conversations__no_conversations" app:layout_constraintBottom_toTopOf="@id/btn_scan" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.482" app:layout_constraintVertical_chainStyle="packed" />
            <Button android:textColor="@drawable/button_text_color" android:id="@id/btn_scan" android:background="@drawable/test_button" android:layout_width="wrap_content" android:layout_height="61.0dip" android:layout_marginBottom="4.0dip" android:text="@string/conversations__scan" android:layout_marginStart="24.0dip" android:layout_marginEnd="24.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/Widget.AppCompat.Button.Borderless" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</LinearLayout>
