<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/main_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView android:id="@id/scrollView2" android:layout_width="0.0dip" android:layout_height="0.0dip" android:fillViewport="true" app:layout_constraintBottom_toTopOf="@id/btn_save" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/iv_avatar" android:layout_width="128.0dip" android:layout_height="128.0dip" android:layout_marginTop="32.0dip" android:contentDescription="@string/profile__cd__avatar_preview" app:layout_constraintBottom_toTopOf="@id/tv_name" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="packed" />
            <TextView android:textSize="20.0sp" android:textColor="@color/text_dark" android:id="@id/tv_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="32.0dip" android:fontFamily="sans-serif-light" app:layout_constraintBottom_toTopOf="@id/et_name" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_avatar" />
            <TextView android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="64.0dip" android:text="@string/profile__name" android:layout_marginStart="16.0dip" app:layout_constraintBottom_toBottomOf="@id/et_name" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/et_name" />
            <EditText android:textSize="14.0sp" android:id="@id/et_name" android:layout_width="0.0dip" android:layout_height="48.0dip" android:layout_marginTop="8.0dip" android:hint="@string/profile__your_name" android:inputType="textCapWords" android:fontFamily="sans-serif-light" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintBottom_toTopOf="@id/v_color" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toEndOf="@id/barrier2" app:layout_constraintTop_toBottomOf="@id/tv_name" />
            <TextView android:id="@id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="64.0dip" android:text="@string/profile__color" android:layout_marginStart="16.0dip" app:layout_constraintBottom_toBottomOf="@id/v_color" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/v_color" />
            <TextView android:id="@id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/profile__device" android:layout_marginStart="16.0dip" app:layout_constraintBottom_toBottomOf="@id/tv_device_name" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/tv_device_name" />
            <View android:id="@id/v_color" android:layout_width="0.0dip" android:layout_height="48.0dip" android:layout_marginTop="16.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintBottom_toTopOf="@id/tv_device_name" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/barrier2" app:layout_constraintTop_toBottomOf="@id/et_name" />
            <androidx.constraintlayout.widget.Barrier android:id="@id/barrier2" android:layout_width="wrap_content" android:layout_height="wrap_content" app:barrierDirection="end" app:constraint_referenced_ids="textView4,textView5,textView8" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
            <TextView android:textSize="16.0sp" android:gravity="center_vertical" android:id="@id/tv_device_name" android:background="?android:selectableItemBackground" android:layout_width="0.0dip" android:layout_height="48.0dip" android:layout_marginTop="16.0dip" android:layout_marginBottom="32.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@id/barrier2" app:layout_constraintTop_toBottomOf="@id/v_color" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <Button android:textColor="@android:color/white" android:layout_gravity="center_horizontal" android:id="@id/btn_save" android:background="@drawable/ic_blue" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/profile__save" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintStart_toStartOf="parent" style="@style/Widget.AppCompat.Button.Borderless" />
</androidx.constraintlayout.widget.ConstraintLayout>
