<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/main_background" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:id="@id/view" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_height="110.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/imageView" android:layout_width="68.0dip" android:layout_height="68.0dip" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" android:layout_marginStart="24.0dip" app:layout_constraintBottom_toBottomOf="@id/view" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@mipmap/ic_launcher" />
        <TextView android:textSize="20.0sp" android:textColor="@android:color/white" android:id="@id/textView9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/app_name" android:fontFamily="sans-serif-light" android:layout_marginStart="16.0dip" app:layout_constraintStart_toEndOf="@id/imageView" app:layout_constraintTop_toTopOf="@id/imageView" />
        <TextView android:textColor="@android:color/white" android:id="@id/tv_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" android:fontFamily="sans-serif-light" android:layout_marginStart="16.0dip" app:layout_constraintBottom_toBottomOf="@id/imageView" app:layout_constraintStart_toEndOf="@id/imageView" />
        <TextView android:textSize="16.0sp" android:textColor="@color/text_dark" android:id="@id/textView11" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/about__description" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_app_credentials" />
        <Button android:textColor="@android:color/white" android:id="@id/btn_github" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/about__go_to_github" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView11" style="@style/Widget.AppCompat.Button.Colored" />
        <TextView android:textSize="16.0sp" android:textColor="@color/text_dark" android:id="@id/textView12" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/about__localization" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btn_github" />
        <Button android:textColor="@android:color/white" android:id="@id/btn_crowdin" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/about__go_to_crowdin" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView12" style="@style/Widget.AppCompat.Button.Colored" />
        <TextView android:textSize="16.0sp" android:textColor="@color/text_dark" android:id="@id/tv_app_credentials" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:textIsSelectable="true" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
